fix: try to fix whit bg on mobile devices #7

--- a/src/app/app.module.scss
+++ b/src/app/app.module.scss
@@ -91,7 +91,7 @@
   position: absolute;
   bottom: 0;
   left: 50%;
-  transform: translateX(-40%);
+  transform: translateX(-50%);
   background: transparent !important; /* на всяк випадок */
   mix-blend-mode: normal;
 }
